[project]
name = "langflow-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan",email = "evan@ivc.media"}
]

requires-python = ">=3.11,<3.13"
dependencies = [
    "slack-sdk",
    "llama-index",
    "llama-index-vector-stores-pinecone",
    "cloudinary",
    "llama-index-readers-google",
    "langflow>=1.0.19.post2",
]
