[project]
name = "langflow-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "cloudinary>=1.44.0",
    "llama-index>=0.12.40",
    "llama-index-cloud-sql-pg>=0.2.2",
    "llama-index-readers-google>=0.6.1",
    "llama-index-vector-stores-pinecone>=0.4.5",
    "slack-sdk>=3.35.0",
]
